--- a/Flexbox.html
+++ b/Flexbox.html
@@ -13,11 +13,14 @@
 </h1>
 <body>
 
-    <header class ="Head"> 
+    <nav class ="navbar"> 
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+        <li>Products</li>
+    </nav>
 
-    </header>
-
-<div class="container">
+<div class="containerbegin">
 <img src="https://cdn.shopify.com/s/files/1/1045/8368/files/Ryan-Gosling-Wearing-Randolph-Aviator-23K-sunglasses-gold.jpg?v=1664965510" alt="Nick">
 
 <div id="Intro"
